Small unit test change

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,13 @@ repos:
   rev: v2.1.0
   hooks:
   - id: bandit
+
+-   repo: https://github.com/codespell-project/codespell
+    rev: v1.16.0
+    hooks:
+    -   id: codespell
+        name: codespell
+        description: Checks for common misspellings in text files.
+        entry: codespell --ignore-words ignore-spelling-words.txt readme.md code.py
+        language: python
+        types: [text]
