--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -23,3 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
+
+      - name: Run pytest
+        run: |
+          pytest
